--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "home",
-  "author": "Fosvcat",
+  "author": "imsyy",
   "github": "https://github.com/fosvcat/home",
   "home": "https://www.fosvcat.top",
   "private": true,
