--- a/package.json
+++ b/package.json
@@ -1,43 +1,27 @@
 {
-  "name": "home",
-  "author": "imsyy",
-  "github": "https://github.com/fosvcat/home",
-  "home": "https://www.fosvcat.top",
+  "name": "hexo-site",
+  "version": "0.0.0",
   "private": true,
-  "version": "4.1.4",
-  "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
-    "preview": "vite preview",
-    "format": "prettier --write src/",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix"
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
+  },
+  "hexo": {
+    "version": "7.1.1"
   },
   "dependencies": {
-    "@worstone/vue-aplayer": "^1.0.6",
-    "aplayer": "^1.10.1",
-    "axios": "^1.6.3",
-    "element-plus": "^2.4.4",
-    "fetch-jsonp": "^1.3.0",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "swiper": "^9.4.1",
-    "vue": "^3.4.3"
-  },
-  "devDependencies": {
-    "@icon-park/vue-next": "^1.4.2",
-    "@vicons/fa": "^0.12.0",
-    "@vicons/utils": "^0.1.4",
-    "@vitejs/plugin-vue": "^4.6.2",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.6",
-    "terser": "^5.26.0",
-    "unplugin-auto-import": "^0.11.5",
-    "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.5.1",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-pwa": "^0.14.7"
+    "hexo": "^7.0.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-stylus": "^3.0.0",
+    "hexo-server": "^3.0.0",
+    "hexo-theme-butterfly": "^4.12.0",
+    "hexo-theme-landscape": "^1.0.0"
   }
 }
